# aurelian

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  D4D_FILE_TYPE_SUPPORT_ADDED.md  Makefile  README.md  README_sheet_downloader.md  SESSION_SUMMARY.md  batch_extract_gpt5.py  demo_d4d.py  download_from_sheet.py  index.html  iris_dataset_d4d.yaml  mimic_cxr_d4d.yaml  mkdocs.yml  pyproject.toml  test_complex_d4d.py  test_d4d.py  test_d4d_builtin.py  tox.ini  validated_d4d_wrapper.py
.github/workflows/: claude.yml  deploy-docs.yml  pypi-publish.yml  qc.yml
agents/amigo_agent/: index.html
agents/biblio_agent/: index.html
agents/checklist_agent/: index.html
agents/chemistry_agent/: index.html
agents/d4d_agent/: index.html
agents/diagnosis_agent/: index.html
agents/gene_agent/: index.html
agents/github_agent/: index.html
agents/github_agent/paperqa_agent/: index.html
agents/goann_agent/: index.html
agents/gocam_agent/: index.html
agents/linkml_agent/: index.html
agents/monarch_agent/: index.html
agents/ontology_mapper_agent/: index.html
agents/phenopacket_agent/: index.html
agents/rag_agent/: index.html
agents/ubergraph_agent/: index.html
agents/uniprot_agent/: index.html
cli/: index.html
docs/: index.md  mcp.md
docs/agents/: gene_agent.md  goann_agent.md
docs/agents/github_agent/: index.md  paperqa_agent.md
docs/examples/: GO-CAM-Drawings.ipynb  GO-CAM-Reviews.ipynb  PaperQA-Example.ipynb  Perplexity-Example.ipynb  TranscriptionFactors.ipynb
docs/examples/github/: PullRequest.ipynb
examples/GO-CAM-Drawings/: index.html
examples/GO-CAM-Reviews/: index.html
examples/PaperQA-Example/: index.html
examples/Perplexity-Example/: index.html
examples/Terpenoids/: index.html
examples/TranscriptionFactors/: index.html
examples/github/PullRequest/: index.html
in-progress/github/: PullRequest.ipynb
mcp/: index.html
notebooks/: D4D_Agent_Demo.ipynb  d4d_agent_output.yaml
search/: search_index.json
src/aurelian/: cli.py
src/aurelian/agents/aggregator/: __init__.py  aggregator_config.py
src/aurelian/agents/biblio/: biblio_mcp.py
src/aurelian/agents/d4d/: d4d_agent.py  d4d_tools.py
src/aurelian/evaluators/: knowledge_agent_evaluator.py
src/aurelian/mcp/: amigo_mcp_test.py  gocam_mcp_test.py  mcp_test.py  phenopackets_mcp_test.py
src/aurelian/utils/: ontology_utils.py  pdf_fetcher.py  search_utils.py
tests/: conftest.py
tests/input/: 66e382fb00002105-BMP8A_role_in_spermatogenesis_via_SMAD1__SMAD5_and_SMAD9__Human_.md
tests/test_agents/: test_goann_agent.py  test_gocam_agent.py  test_monarch_agent.py  test_paperqa_agent.py  test_scientific_knowledge_extraction_agent.py  test_talisman_agent.py  test_talisman_analysis.py  test_talisman_cli.py  test_talisman_lookup.py  test_uniprot_agent.py  test_web_tools.py
tests/test_agents/test_draw/: __init__.py  test_draw_agent.py
tests/test_agents/test_github/: test_github_tools.py  test_integration.py
tests/test_agents/test_scientific_knowledge_extraction/: test_extraction.py
(+101 files in other folders)
